--- a/chepuhaFrontend/src/components/JoinCard/JoinCard.module.scss
+++ b/chepuhaFrontend/src/components/JoinCard/JoinCard.module.scss
@@ -100,18 +100,18 @@
 
   .YellowGuy,
   .RedGuy {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
   }
 
   .YellowGuy {
-    right: -20px;
-    bottom: -60px;
+    right: -40px;
+    bottom: -10px;
   }
 
   .RedGuy {
-    left: -20px;
-    bottom: -110px;
+    left: -40px;
+    bottom: -30px;
   }
 
   .input {
